k3s/services/planka/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka-ingress
  namespace: planka
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - planka.homelab.kevinlutzer.ca
    secretName: planka-homelab-kevinlutzer-ca-tls
  rules:
  - host: planka.homelab.kevinlutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: planka
              port:
                number: 80
